[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>", "Maximilian Schneider <max@mango.markets>"]
edition = "2021"
name = "solana-bench-mango"
version = "1.10.26"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
borsh = "0.9.3"
chrono = "0.4.19"
clap = "2.33.1"
crossbeam-channel = "0.5"
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
fixed-macro = "^1.1.1"
multiqueue = "^0.3.2"
log = "0.4.14"
rand = ">=0.8.5"
rayon = "1.5.1"
serde = "1.0.136"
serde_derive = "1.0.103"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
mango = { path = "../../mango-v3/program", default-features = false, features = ["no-entrypoint"] }
mango-common = { path = "../../mango-v3/common" }
solana-bench-tps = { path = "../bench-tps", version = "=1.10.26" }
solana-clap-utils = { path = "../clap-utils", version = "=1.10.26" }
solana-cli-config = { path = "../cli-config", version = "=1.10.26" }
solana-client = { path = "../client", version = "=1.10.26" }
solana-core = { path = "../core", version = "=1.10.26" }
solana-faucet = { path = "../faucet", version = "=1.10.26" }
solana-genesis = { path = "../genesis", version = "=1.10.26" }
solana-gossip = { path = "../gossip", version = "=1.10.26" }
solana-logger = { path = "../logger", version = "=1.10.26" }
solana-measure = { path = "../measure", version = "=1.10.26" }
solana-metrics = { path = "../metrics", version = "=1.10.26" }
solana-net-utils = { path = "../net-utils", version = "=1.10.26" }
solana-rpc = { path = "../rpc", version = "=1.10.26" }
solana-runtime = { path = "../runtime", version = "=1.10.26" }
solana-sdk = { path = "../sdk", version = "=1.10.26" }
solana-streamer = { path = "../streamer", version = "=1.10.26" }
solana-transaction-status = { path = "../transaction-status", version = "=1.10.26" }
solana-version = { path = "../version", version = "=1.10.26" }
thiserror = "1.0"
solana-program = ">=1.9.0"

[dev-dependencies]
serial_test = "0.6.0"
solana-local-cluster = { path = "../local-cluster", version = "=1.10.26" }
solana-test-validator = { path = "../test-validator", version = "=1.10.26" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
