[package]
name = "light-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client={path = "../client"}
solana-sdk={path = "../sdk"}
tokio = { version = "1.14.1", features = ["full"]}
rayon = "1.5"

[dev-dependencies]
csv = "1.1.6"
serde = { version = "1", features = ["derive"]}


[[bench]]
name="metrics"
harness=false